2005-05-20  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/WriteXML.py: Remove unnecessary database reads, so it does no
	longer crash when exporting a corrupt database.

2005-05-20  Alex Roitman  <shura@gramps-project.org>
	* src/SelectObject.py (on_select_row): Properly get mime type.
	* src/GrampsBSDDB.py (remove_object): Use correct key for transaction.
	* src/ImageSelect.py (add_thumbnail, on_delete_media_clicked):
	Identify canvas items by MediaRef instance, not by the handle of the
	referred MediaObject.

2005-05-19  Don Allingham  <don@gramps-project.org>
	* src/DisplayModels.py: remove place column
	* src/MediaView.py: delete Place option
	* src/GrampsDbBase.py: new default for media columns
	* src/GrampsBSDDB.py: upgrade database version for media columns
	* src/MediaView.py: enable sorting by columns
	* src/DisplayModels.py: enable sorting by columns for MediaModel

2005-05-19  Alex Roitman  <shura@gramps-project.org>
	* src/MergePeople.py (merge_family_pair): Properly use handles.
	* src/RelLib.py (SourceNote.replace_source_references): Properly
	replace references; (MediaBase.replace_media_references): Properly
	replace references.
	* src/MergeData.py: Correct comments.
	* src/mergedata.glade: Make information panes non-editable.
	* src/gramps.glade: Enclose date and place groups into tables,
	to allow proper widget order when using tab key.
	* src/EditSource.py (button_press): Properly test event names.
	* src/po/ru.po: Partial update for 2.0.1.

2005-05-19  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/GenericFilter.py: Catch invalid input in some filters;
	(old_names_2_class): Add one name for full 1.0.11 compatibility;
	(FilterParser): Properly catch invalid rule names and invalid
	module/class names.

2005-05-18  Don Allingham  <don@gramps-project.org>
	* src/dates/Date_de.py: handle dates in the form of dd. mon year

2005-05-18  Richard Bos  <radoeka@xs4all.nl>
	* src/data/gramps.desktop: Add Dutch strings.
